--- a/package.json
+++ b/package.json
@@ -9,19 +9,43 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.4",
+    "@react-three/fiber": "^9.3.0",
+    "@react-three/rapier": "^2.1.0",
+    "@tabler/icons-react": "^3.34.1",
+    "clsx": "^2.1.1",
+    "dotted-map": "^2.2.3",
+    "framer-motion": "^12.23.12",
+    "gl-matrix": "^3.4.4",
+    "gsap": "^3.13.0",
+    "maath": "^0.10.8",
+    "meshline": "^3.3.1",
+    "motion": "12.0.0-alpha.2",
+    "next": "15.5.0",
+    "ogl": "^1.0.11",
     "react": "19.1.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "19.1.0",
-    "next": "15.5.0"
+    "react-globe.gl": "^2.35.0",
+    "react-icons": "^5.5.0",
+    "react-typed": "^2.0.12",
+    "simplex-noise": "^4.0.3",
+    "tailwind-merge": "^3.3.1",
+    "three": "^0.179.1",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
-    "@eslint/eslintrc": "^3"
+    "next-transpile-modules": "^10.0.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12",
+    "typescript": "^5"
   }
 }
