--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "19.1.0",
     "react-globe.gl": "^2.35.0",
     "react-icons": "^5.5.0",
+    "react-scroll-motion": "^0.3.5",
     "react-typed": "^2.0.12",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.1",
